<resources>
    <string name="app_name">Lesson1</string>
    <string name="enterMonth">Enter Month</string>
    <string name="add">+</string>
    <string name="substract">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="defaultNumberValue">0</string>
    <string name="errorDivideByZero">Error, cannot divide by 0</string>
    <string name="line">Line</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="invalidMonth">Invalid month</string>
</resources>
