<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.blx.lesson1.Lesson1_2">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/firstEditText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/defaultNumberValue"
        android:inputType="number" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/secondEditText"
        android:layout_below="@+id/firstEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/defaultNumberValue"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/buttonAdd"
        android:layout_below="@+id/secondEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/substract"
        android:id="@+id/buttonSubstract"
        android:layout_below="@+id/secondEditText"
        android:layout_toRightOf="@+id/buttonAdd"
        android:layout_toEndOf="@+id/buttonAdd" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiply"
        android:id="@+id/buttonMultiply"
        android:layout_below="@+id/secondEditText"
        android:layout_toRightOf="@+id/buttonSubstract"
        android:layout_toEndOf="@+id/buttonSubstract" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/divide"
        android:id="@+id/buttonDivide"
        android:layout_alignTop="@+id/buttonMultiply"
        android:layout_toRightOf="@+id/buttonMultiply"
        android:layout_toEndOf="@+id/buttonMultiply" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/defaultNumberValue"
        android:id="@+id/resultTextView"
        android:layout_below="@+id/buttonAdd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/buttonDivide"
        android:layout_alignEnd="@+id/buttonDivide" />

</RelativeLayout>
